Fixed overlapping button

--- a/src/componet/BecomeAPartner.module.css
+++ b/src/componet/BecomeAPartner.module.css
@@ -4,6 +4,10 @@
     width: 100%;
     height: 100vh;
     background: rgba(0, 0, 0, 0.932);
+    background: url(../images/Modal\ backround.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
    
    animation-name: slideDown;
    animation-duration: 3s;
@@ -18,6 +22,7 @@
    animation-duration: 3s;
    /* animation-iteration-count: 1; */
    animation-timing-function: ease-in-out;
+   
 
 }
 
