--- a/src/componet/underlinedform.module.css
+++ b/src/componet/underlinedform.module.css
@@ -7,39 +7,43 @@
     padding: 10px 0px;
     font-family: Arial, Helvetica, sans-serif;
 }
-.btnbig{
-    display:block;
-    width: 130px;
-    height: 50px;
-    background: white;
-    font-size: 17.41px;
-    font-weight: 1000;
-    color: var(--black);
-    border-radius: 10px;
-    transform: scale(-1, 1);
-    font-family: Arial, Helvetica, sans-serif;
-    border: none;
-    cursor: pointer;
-   
-}
-.btnbig:hover{
-border: 2px solid var(--yellow);
-background: none;
-color: white;
-}
+
+
 .formconbig{
     text-align: right;
     color: red;
     transform: scale(-1, 1);
     width: 642px;
     margin-top: 30px;
+    position: absolute;
+    z-index: 0;
+  
 }
 .inputbig::placeholder{
     color: var(--placeholdercolor);
 }
 .underlinedform{
-    position: absolute;
     margin-top: 70px;
-    z-index: -10;
+    text-align: right;
+  
     
 }
+.btn{
+    width: 130px;
+    height: 50px;
+    background: white;
+    color: var(--black);
+    font-size: 17.41px;
+    font-weight: 1000;
+    font-family: Arial, Helvetica, sans-serif;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+    margin-top: 20px;
+   
+}
+.btn:hover{
+    border: 2px solid var(--yellow);
+    background: none;
+    color: white;
+    }
