--- a/src/pages/livetrack.module.css
+++ b/src/pages/livetrack.module.css
@@ -11,6 +11,11 @@
     
  
 }
+/* .underlineCon{
+    position: absolute;
+   
+} */
+
 .wavycon{
 text-align: center;
 
